# ocaml-protoc-plugin

./: Makefile  dune-project  ocaml-protoc-plugin.opam
examples/echo/: dune  test.ml
examples/echo_deriving/: dune  test.ml
examples/echo_deriving/google_types_deriving/: dune
examples/extensions/: test.ml
src/core/: dune  protobuf_core.ml  protobuf_core.mli
src/google_types/: GoogleProtobufDuration.ml  GoogleProtobufTimestamp.ml  dune  google_types.ml
src/ocaml_protoc_plugin/: ProtoBytes.ml  deserialize.ml  dune  extensions.ml  extensions.mli  field.ml  ocaml_protoc_plugin.ml  result.ml  runtime.ml  serialize.ml  service.ml  spec.ml
src/plugin/: base.ml  base.mli  code.ml  emit.ml  emit.mli  names.ml  names.mli  parameters.ml  protoc_gen_ocaml.ml  scope.ml  scope.mli  type.ml  type.mli  type_intf.ml  type_tree.ml  type_tree.mli  types.ml  types.mli
src/spec/: descriptor.ml  options.ml  plugin.ml
test/: dune  enum_test.ml  extensions_test.ml  include_test.ml  int_types_native_test.ml  int_types_test.ml  map_test.ml  message_test.ml  oneof2_test.ml  oneof_test.ml  package_test.ml  packed_test.ml  primitive_types_test.ml  proto2_test.ml  protocol_test.ml  recursive_test.ml  repeated_test.ml  service_test.ml  singleton_record_test.ml
