(library
 (name        google_types)
 (public_name ocaml-protoc-plugin.google_types)
 (preprocess (pps ppx_sexp_conv))
 (libraries
   ocaml_protoc_plugin
   base
 )
 (synopsis "Google well known types")
)

(rule
 (targets google_include)
 (action (with-stdout-to %{targets}
          (run pkg-config protobuf --variable=includedir))))

(rule
 (targets
   GoogleProtobufAny.ml
   GoogleProtobufApi.ml
   GoogleProtobufDescriptor.ml
   GoogleProtobufDuration.ml
   GoogleProtobufEmpty.ml
   GoogleProtobufField_mask.ml
   GoogleProtobufSource_context.ml
   GoogleProtobufStruct.ml
   GoogleProtobufTimestamp.ml
   GoogleProtobufType.ml
   GoogleProtobufWrappers.ml)
 (deps
  (:plugin ../plugin/protoc_gen_ocaml.exe))
 (action
  (run protoc -I %{read-lines:google_include}
       "--plugin=protoc-gen-ocaml=%{plugin}"
       "--ocaml_out=open=Base;annot=[@@deriving sexp_of]:."
       %{read-lines:google_include}/google/protobuf/any.proto
       %{read-lines:google_include}/google/protobuf/api.proto
       %{read-lines:google_include}/google/protobuf/descriptor.proto
       %{read-lines:google_include}/google/protobuf/duration.proto
       %{read-lines:google_include}/google/protobuf/empty.proto
       %{read-lines:google_include}/google/protobuf/field_mask.proto
       %{read-lines:google_include}/google/protobuf/source_context.proto
       %{read-lines:google_include}/google/protobuf/struct.proto
       %{read-lines:google_include}/google/protobuf/timestamp.proto
       %{read-lines:google_include}/google/protobuf/type.proto
       %{read-lines:google_include}/google/protobuf/wrappers.proto
)))
